# DE_Sprint

./: .gitignore  LICENSE  README.md  pyproject.toml
Task_5/: 1.cpp  10.cpp  2.cpp  4.cpp  6.cpp  7.cpp  8.cpp  9.cpp
Unit_1/: TASKS.md
Unit_1/task_1/: 1.1.py  1.2.py  1.3.py  1.4.py  1.5.py  api.json
Unit_1/task_2/: task_2.ipynb
Unit_1/task_3/: task_3.ipynb
Unit_1/task_5/: 5.cpp
Unit_2/Postgres/: TASKS.md
Unit_2/Practice/: TASKS.md
Unit_3/Airflow/: Dockerfile  docker-compose.yaml  exec_sql.py  requirements.txt
Unit_3/Airflow/dags/: first_dag.py  practice.py  second_dag.py
Unit_3/Airflow/data/: random_numbers.txt
Unit_3/HDFS/: TASKS.md  listing.txt
Unit_3/Spark/: DE_spark.ipynb
config/: aux.py  logger.py
task_1/: parse.json
task_2/: task_2.ipynb
task_4/: task_4.ipynb
task_5/: 3.cpp
