[tool.poetry]
name = "de_sprint"
version = "0.1.0"
description = "Data Engineer Course Tasks Solutions"
authors = ["Ivan Andriushin <i.andryushin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.0"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
numpy = "^1.23.4"
scipy = "^1.9.2"
matplotlib = "^3.6.1"
pathlib = "^1.0.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
