[tool.poetry]
name = "de_sprint"
version = "0.1.0"
description = "Data Engineer Course Tasks Solutions"
authors = ["Ivan Andriushin <i.andryushin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.0"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
numpy = "^1.23.4"
scipy = "^1.9.2"
matplotlib = "3.6.0"
pathlib = "^1.0.1"
lxml = "^4.9.1"
PyYAML = "^6.0"
scikit-learn = "^1.0"
pmdarima = "^2.0.1"
plotly = "^5.10.0"
statsmodels = "^0.13.2"
shutup = "^0.2.0"
openpyxl = "^3.0.10"
qbstyles = "^0.1.4"
mplcyberpunk = "^0.6.0"
sympy = "^1.11.1"
seaborn = "^0.12.1"
missingno = "^0.5.1"
wordcloud = "^1.8.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyterlab = "^3.4.8"
jupyterlab-spellchecker = "^0.7.2"
jupyterlab-spreadsheet-editor = "^0.6.1"
jupyterlab-execute-time = "^2.1.0"
jupyterlab-system-monitor = "^0.8.0"
jupyter-dash = "^0.4.2"
jupyterlab-drawio = "^0.9.0"
jupyterlab-hdf = "^1.2.0"
jupyterlab-git = "^0.39.3"
jupyterlab-gitlab = "^3.0.0"
jupyterlab-github = "^3.0.1"
jupyterlab-autoversion = "^0.3.6"
jupyterlab-pullrequests = "^3.0.2"
nbdime = "^3.1.1"
theme-darcula = "^4.0.0"
neptune-notebooks = "^0.9.3"
jupyterlab-latex = "^3.1.0"
npm = "^0.1.1"
jupyterlab-materialdarker = "^0.6.0"
JLDracula = "^0.1.0"
jupyterlab-horizon-theme = "^3.0.1"
retrolab = "^0.3.21"
jupyterlab-kite = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
